--- a/desafios/desafio12/estilo/style.css
+++ b/desafios/desafio12/estilo/style.css
@@ -57,6 +57,10 @@ section {
     font-size: 1.5em;
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 .normal {
     background-color: white;
     color: black;
@@ -65,12 +69,26 @@ section {
 .imagem {
     background-color: rgb(51, 51, 51);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.518);
+    background-size: cover;
+    background-attachment: fixed;
+
 }
 
 .imagem > p {
     background-color: rgba(0, 0, 0, 0.281);
     display: inline-block;
     padding: 5px;
+    text-shadow: 1px 1px 0px black;
+}
+
+#img01{
+    background-image: url("../imagens/background001.jpg");
+    background-position: right center;
+}
+
+#img02{
+    background-image: url("../imagens/background002.jpg");
 }
 
 footer {
